cmake_minimum_required(VERSION 3.2)
project(monopoly)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    src/lib/rapidxml-1.13/rapidxml.hpp
    src/lib/rapidxml-1.13/rapidxml_iterators.hpp
    src/lib/rapidxml-1.13/rapidxml_print.hpp
    src/lib/rapidxml-1.13/rapidxml_utils.hpp
    src/GameEngine/Billet/Billet.cpp
    src/GameEngine/Billet/Billet.h
    src/GameEngine/Billet/BilletManager.cpp
    src/GameEngine/Billet/BilletManager.h
    src/GameEngine/Case/Carte/AllerPrison.cpp
    src/GameEngine/Case/Carte/AllerPrison.h
    src/GameEngine/Case/Carte/Anniversaire.cpp
    src/GameEngine/Case/Carte/Anniversaire.h
    src/GameEngine/Case/Carte/Carte.cpp
    src/GameEngine/Case/Carte/Carte.h
    src/GameEngine/Case/Carte/Deplacement.cpp
    src/GameEngine/Case/Carte/Deplacement.h
    src/GameEngine/Case/Carte/EstPayeParBanque.cpp
    src/GameEngine/Case/Carte/EstPayeParBanque.h
    src/GameEngine/Case/Carte/Payer.cpp
    src/GameEngine/Case/Carte/Payer.h
    src/GameEngine/Case/Carte/PayerConstructions.cpp
    src/GameEngine/Case/Carte/PayerConstructions.h
    src/GameEngine/Case/Carte/SortirPrison.cpp
    src/GameEngine/Case/Carte/SortirPrison.h
    src/GameEngine/Case/Propriété/Domaine.cpp
    src/GameEngine/Case/Propriété/Domaine.h
    src/GameEngine/Case/Propriété/Famille.cpp
    src/GameEngine/Case/Propriété/Famille.h
    src/GameEngine/Case/Propriété/Gare.cpp
    src/GameEngine/Case/Propriété/Gare.h
    src/GameEngine/Case/Propriété/Propriete.cpp
    src/GameEngine/Case/Propriété/Propriete.h
    src/GameEngine/Case/Propriété/ServicePublique.cpp
    src/GameEngine/Case/Propriété/ServicePublique.h
    src/GameEngine/Case/Arrestation.cpp
    src/GameEngine/Case/Arrestation.h
    src/GameEngine/Case/Case.cpp
    src/GameEngine/Case/Case.h
    src/GameEngine/Case/CaseCarte.cpp
    src/GameEngine/Case/CaseCarte.h
    src/GameEngine/Case/Depart.cpp
    src/GameEngine/Case/Depart.h
    src/GameEngine/Case/Parc.cpp
    src/GameEngine/Case/Parc.h
    src/GameEngine/Case/Prison.cpp
    src/GameEngine/Case/Prison.h
    src/GameEngine/Case/Taxe.cpp
    src/GameEngine/Case/Taxe.h
    src/GameEngine/Participant/Cagnotte.cpp
    src/GameEngine/Participant/Cagnotte.h
    src/GameEngine/Participant/Joueur.cpp
    src/GameEngine/Participant/Joueur.h
    src/GameEngine/Participant/Participant.cpp
    src/GameEngine/Participant/Participant.h
    src/GameEngine/Carte.cpp
    src/GameEngine/De.cpp
    src/GameEngine/De.h
    src/GameEngine/Plateau.cpp
    src/GameEngine/Plateau.h
    src/GameEngine/plateauUtil.cpp
    src/GameEngine/plateauUtil.h
    src/Graphic/GuiItems/Appartenance.cpp
    src/Graphic/GuiItems/Appartenance.h
    src/Graphic/GuiItems/Hotel.cpp
    src/Graphic/GuiItems/Hotel.h
    src/Graphic/GuiItems/Maison.cpp
    src/Graphic/GuiItems/Maison.h
    src/Graphic/GuiItems/Pion.cpp
    src/Graphic/GuiItems/Pion.h
    src/Graphic/Listeners/AppartenanceOnClickListener.cpp
    src/Graphic/Listeners/AppartenanceOnClickListener.h
    src/Graphic/Listeners/BilletOnClickListener.cpp
    src/Graphic/Listeners/BilletOnClickListener.h
    src/Graphic/Listeners/CommencerOnClickListener.cpp
    src/Graphic/Listeners/CommencerOnClickListener.h
    src/Graphic/Listeners/ConstruireOnClickListener.cpp
    src/Graphic/Listeners/ConstruireOnClickListener.h
    src/Graphic/Listeners/FaireMonnaieOnClickListener.cpp
    src/Graphic/Listeners/FaireMonnaieOnClickListener.h
    src/Graphic/Listeners/FinirTourKeyReleasedListener.cpp
    src/Graphic/Listeners/FinirTourKeyReleasedListener.h
    src/Graphic/Listeners/FinirTourOnClickListener.cpp
    src/Graphic/Listeners/FinirTourOnClickListener.h
    src/Graphic/Listeners/HypothequerOnClickListener.cpp
    src/Graphic/Listeners/HypothequerOnClickListener.h
    src/Graphic/Listeners/JouerOnClickListener.cpp
    src/Graphic/Listeners/JouerOnClickListener.h
    src/Graphic/Listeners/LancerLesDesKeyReleasedListener.cpp
    src/Graphic/Listeners/LancerLesDesKeyReleasedListener.h
    src/Graphic/Listeners/LancerLesDesOnClickListener.cpp
    src/Graphic/Listeners/LancerLesDesOnClickListener.h
    src/Graphic/Listeners/LeverHypothequeOnClickListener.cpp
    src/Graphic/Listeners/LeverHypothequeOnClickListener.h
    src/Graphic/Listeners/NonPayerOnClickListener.cpp
    src/Graphic/Listeners/NonPayerOnClickListener.h
    src/Graphic/Listeners/OuiPayerOnClickListener.cpp
    src/Graphic/Listeners/OuiPayerOnClickListener.h
    src/Graphic/Listeners/QuitterOnClickListener.cpp
    src/Graphic/Listeners/QuitterOnClickListener.h
    src/Graphic/Listeners/ResetBilletsOnClickListener.cpp
    src/Graphic/Listeners/ResetBilletsOnClickListener.h
    src/Graphic/Listeners/ValiderBilletsOnCLickListener.cpp
    src/Graphic/Listeners/ValiderBilletsOnClickListener.h
    src/Graphic/Jeu.cpp
    src/Graphic/Jeu.h
    src/Graphic/JeuConstantes.cpp
    src/Graphic/JeuConstantes.h
    src/GraphicEngine/ActionListeners/ActionListener.cpp
    src/GraphicEngine/ActionListeners/ActionListener.h
    src/GraphicEngine/ActionListeners/ButtonMouseOutListener.cpp
    src/GraphicEngine/ActionListeners/ButtonMouseOutListener.h
    src/GraphicEngine/ActionListeners/ButtonMouseOverListener.cpp
    src/GraphicEngine/ActionListeners/ButtonMouseOverListener.h
    src/GraphicEngine/ActionListeners/SpinnerOnClickListener.cpp
    src/GraphicEngine/ActionListeners/SpinnerOnClickListener.h
    src/GraphicEngine/EventHandler/EventHandler.cpp
    src/GraphicEngine/EventHandler/EventHandler.h
    src/GraphicEngine/EventHandler/KeyReleasedHandler.cpp
    src/GraphicEngine/EventHandler/KeyReleasedHandler.h
    src/GraphicEngine/EventHandler/MouseOutHandler.cpp
    src/GraphicEngine/EventHandler/MouseOutHandler.h
    src/GraphicEngine/EventHandler/MouseOverHandler.cpp
    src/GraphicEngine/EventHandler/MouseOverHandler.h
    src/GraphicEngine/EventHandler/OnClickHandler.cpp
    src/GraphicEngine/EventHandler/OnClickHandler.h
    src/GraphicEngine/GuiManager/GuiItem/Button.cpp
    src/GraphicEngine/GuiManager/GuiItem/Button.h
    src/GraphicEngine/GuiManager/GuiItem/GuiItem.cpp
    src/GraphicEngine/GuiManager/GuiItem/GuiItem.h
    src/GraphicEngine/GuiManager/GuiItem/Image.cpp
    src/GraphicEngine/GuiManager/GuiItem/Image.h
    src/GraphicEngine/GuiManager/GuiItem/ModalWindow.cpp
    src/GraphicEngine/GuiManager/GuiItem/ModalWindow.h
    src/GraphicEngine/GuiManager/GuiItem/Spinner.cpp
    src/GraphicEngine/GuiManager/GuiItem/Spinner.h
    src/GraphicEngine/GuiManager/GuiItem/TextBlock.cpp
    src/GraphicEngine/GuiManager/GuiItem/TextBlock.h
    src/GraphicEngine/GuiManager/CallBackManager.cpp
    src/GraphicEngine/GuiManager/CallBackManager.h
    src/GraphicEngine/GuiManager/GuiManager.cpp
    src/GraphicEngine/GuiManager/GuiManager.h
    src/GraphicEngine/Constant.cpp
    src/GraphicEngine/Constant.h
    src/GraphicEngine/GraphicEngine.cpp
    src/GraphicEngine/GraphicEngine.h
    src/GraphicEngine/Police.cpp
    src/GraphicEngine/Police.h
    src/main.cpp
    src/util.cpp
    src/util.h
    tests/BilletManagerTest.cpp
    tests/BilletManagerTest.h
    tests/BilletManagerTestRunner.cpp
    tests/JoueurTest.cpp
    tests/JoueurTest.h
    tests/JoueurTestRunner.cpp
    tests/ParticipantTest.cpp
    tests/ParticipantTest.h
    tests/ParticipantTestRunner.cpp)

add_executable(monopoly ${SOURCE_FILES})